# opi

./: .clang-format  .gitignore  CMakeLists.txt  cmds.txt  compile.bat  compile_only.bat  compile_only_debug.bat  compile_only_release.bat  generate.bat  generate_release.bat  generate_release_tracy.bat  run.bat  run_release.bat  todo.md
lib/: CMakeLists.txt
src/: compile_commands.json
src/.cache/clangd/index/: Application.cpp.2A6C3AED14586480.idx  Application.h.F4C235FA4B217E20.idx  Lavie.cpp.EE3FE3D76357F365.idx  Main.cpp.013C2BF11C649A7A.idx  MonFichier.cpp.5A123BB727F1C2BE.idx  MonFichier.h.C9B663DDDA029A05.idx  MyThing.cpp.4EFB1758DBEA47F6.idx
src/game/: CMakeLists.txt  Main.cpp
src/game/GameLol/: MonFichier.cpp  MonFichier.h
src/opiEngine/: Application.cpp  CMakeLists.txt  pch.h
src/opiEngine/core/: AppLayer.cpp  Logger.cpp
src/opiEngine/include/opiEngine/: Application.h
src/opiEngine/include/opiEngine/Core/: AppLayer.h  Logger.h
src/opiEngine/include/opiEngine/Renderer/: Window.h
src/opiEngine/lib/: CMakeLists.txt
src/opiEngine/renderer/: Window.cpp
